# aoc-2025

./: .gitignore  Cargo.toml  HOWTO.md  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: allocations.rs  digits.rs  direction.rs  graph.rs  grid.rs  lib.rs  line_segment.rs  main.rs  maps.rs  md5.rs  nibble.rs  template.txt
src/template/: day.rs  mod.rs  readme_benchmarks.rs  run_multi.rs  runner.rs  timings.rs
src/template/commands/: solve.rs
