[package]
name = "advent_of_code"
version = "0.10.0"
edition = "2024"
default-run = "advent_of_code"
publish = false
rust-version = "1.91.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
advent-of-code-ocr = "0.1.1"
anyhow = "1.0.100"
aoc-parse = "0.2.18"
array_tool = "1.0.3"

# Template dependencies
chrono = { version = "0.4.42", optional = true }
dhat = { version = "0.3.3", optional = true }
fancy-regex = "0.16.2"
itertools = "0.14.0"
json = "0.12.4"
lazy_static = "1.5.0"
libm = "0.2.15"
md5 = "0.8.0"
memoize = "0.5.1"
nalgebra = "0.34.1"
ndarray = "0.17.1"
num = "0.4.3"
num-modular = "0.6.1"
ordered-float = "5.1.0"
paste = "1.0.15"
pathfinding = "4.14.0"
petgraph = "0.8.3"
pico-args = "0.5.0"
rapidhash = "4.1.1"
rayon = "1.11.0"
regex = "1.12.2"
rustworkx-core = "0.17.1"
tinyjson = "2.5.1"
topological-sort = "0.2.2"
unindent = "0.2.4"
z3 = "0.19.4"

# Solution dependencies
